[gd_scene load_steps=9 format=3 uid="uid://dclfre7l0vk8"]

[ext_resource type="PackedScene" uid="uid://c7gocwe56g3jk" path="res://Entities/Player.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://b448nk8numrcw" path="res://Entities/Obstacle.tscn" id="2"]
[ext_resource type="Script" path="res://Screens/Scripts/Game.gd" id="3"]
[ext_resource type="PackedScene" path="res://Entities/Background.tscn" id="4"]
[ext_resource type="Theme" uid="uid://bci48k31qmg5s" path="res://UI/Themes/Button Main.tres" id="5"]
[ext_resource type="FontFile" uid="uid://1ly641ihsl4n" path="res://Font/Kenney Future.ttf" id="6"]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(300.75, 37.5)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("6")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Game" type="Node2D"]
script = ExtResource("3")

[node name="Background" parent="." instance=ExtResource("4")]
scale = Vector2(1, 1.01)

[node name="Obstacles" type="Node2D" parent="."]

[node name="Obstacle" parent="Obstacles" instance=ExtResource("2")]
position = Vector2(644, 0)

[node name="Obstacle3" parent="Obstacles" instance=ExtResource("2")]
position = Vector2(944, 0)

[node name="Obstacle2" parent="Obstacles" instance=ExtResource("2")]
position = Vector2(1244, 0)

[node name="Obstacle4" parent="Obstacles" instance=ExtResource("2")]
position = Vector2(1544, 0)

[node name="Obstacle5" parent="Obstacles" instance=ExtResource("2")]
position = Vector2(1844, 0)

[node name="Player" parent="." instance=ExtResource("1")]
position = Vector2(57, 178)
collision_layer = 4
collision_mask = 4

[node name="KillFloor" type="Area2D" parent="."]
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillFloor"]
position = Vector2(150, 1043)
shape = SubResource("2")

[node name="KillCeiling" type="Area2D" parent="."]
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillCeiling"]
position = Vector2(152, -20)
shape = SubResource("2")

[node name="lblScore" type="Label" parent="."]
offset_left = 19.0
offset_right = 614.0
offset_bottom = 61.0
theme_override_fonts/font = SubResource("3")
text = "Score: 0"

[node name="btnRestart" type="Button" parent="."]
visible = false
offset_left = 181.0
offset_top = 805.0
offset_right = 404.0
offset_bottom = 882.0
theme = ExtResource("5")
text = "Restart"

[node name="btnReturn" type="Button" parent="."]
visible = false
offset_left = 180.0
offset_top = 894.0
offset_right = 403.0
offset_bottom = 971.0
theme = ExtResource("5")
text = "Menu"

[connection signal="area_entered" from="KillFloor" to="." method="_on_Obstacle_kill_area_entered"]
[connection signal="area_entered" from="KillCeiling" to="." method="_on_Obstacle_kill_area_entered"]
[connection signal="pressed" from="btnRestart" to="." method="_on_btnRestart_pressed"]
[connection signal="pressed" from="btnReturn" to="." method="_on_btnReturn_pressed"]
